--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2284,6 +2284,25 @@
                             <option value="insufficient_data">Insufficient data (1 pair only)</option>
                         </select>
                     </div>
+                    <div class="control-group">
+                        <label>Search Signature</label>
+                        <input type="text" id="conserved-search" list="conserved-signature-list" placeholder="Type to search..." style="padding: 0.5rem; border: 1px solid #ddd; border-radius: 4px; width: 150px;">
+                        <datalist id="conserved-signature-list"></datalist>
+                    </div>
+                </div>
+
+                <!-- Signature Detail Panel (shown when a signature is selected) -->
+                <div id="conserved-signature-detail" style="display: none; background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%); border-radius: 8px; padding: 1rem; margin-bottom: 1rem;">
+                    <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                        <div>
+                            <div style="font-size: 1.25rem; font-weight: bold; color: #1565c0;" id="conserved-detail-name">-</div>
+                            <div style="font-size: 0.9rem; color: #666; margin-top: 0.25rem;" id="conserved-detail-category">-</div>
+                        </div>
+                        <button onclick="clearConservedSearch()" style="background: #1565c0; color: white; border: none; border-radius: 4px; padding: 0.25rem 0.75rem; cursor: pointer; font-size: 0.85rem;">Clear</button>
+                    </div>
+                    <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem; margin-top: 1rem;" id="conserved-detail-correlations">
+                        <!-- Filled by JS -->
+                    </div>
                 </div>
 
                 <!-- Summary Cards -->
@@ -10025,6 +10044,9 @@
 
             // Use signature_reliability data from cross_atlas.json
             const reliabilityData = state.data.crossatlas?.signature_reliability?.[sigType];
+            const searchInput = document.getElementById('conserved-search');
+            const datalist = document.getElementById('conserved-signature-list');
+            const detailPanel = document.getElementById('conserved-signature-detail');
 
             if (!reliabilityData) {
                 if (heatmapContainer) {
@@ -10034,7 +10056,67 @@
                 if (tableContainer) {
                     tableContainer.innerHTML = '<p style="text-align:center; color:#666; padding:2rem;">No data available.</p>';
                 }
+                if (datalist) datalist.innerHTML = '';
+                if (detailPanel) detailPanel.style.display = 'none';
                 return;
+            }
+
+            // Populate signature search datalist
+            const allSignatures = reliabilityData.signatures || [];
+            if (datalist) {
+                datalist.innerHTML = allSignatures.map(s => `<option value="${s.signature}">`).join('');
+            }
+
+            // Handle signature search/selection
+            const searchValue = searchInput?.value?.trim() || '';
+            const selectedSig = allSignatures.find(s => s.signature.toLowerCase() === searchValue.toLowerCase());
+
+            if (selectedSig && detailPanel) {
+                detailPanel.style.display = 'block';
+                document.getElementById('conserved-detail-name').textContent = selectedSig.signature;
+
+                // Category display
+                const categoryColors = {
+                    'highly_conserved': { bg: '#e8f5e9', text: '#2e7d32', label: 'Highly Conserved (r > 0.7 in 2+ pairs)' },
+                    'moderately_conserved': { bg: '#fff3e0', text: '#e65100', label: 'Moderately Conserved (r > 0.5 in 2+ pairs)' },
+                    'atlas_specific': { bg: '#fce4ec', text: '#c2185b', label: 'Atlas-Specific (low cross-atlas correlation)' },
+                    'insufficient_data': { bg: '#f5f5f5', text: '#616161', label: 'Limited Data (only 1 atlas pair)' }
+                };
+                const catInfo = categoryColors[selectedSig.category] || { bg: '#f5f5f5', text: '#666', label: selectedSig.category };
+                document.getElementById('conserved-detail-category').innerHTML = `<span style="background: ${catInfo.bg}; color: ${catInfo.text}; padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.85rem;">${catInfo.label}</span>`;
+
+                // Correlation details for each atlas pair
+                const pairLabels = {
+                    'cima_vs_inflammation': 'CIMA vs Inflammation',
+                    'cima_vs_scatlas': 'CIMA vs scAtlas',
+                    'inflammation_vs_scatlas': 'Inflammation vs scAtlas'
+                };
+                let corrHtml = '';
+                for (const [pairKey, pairLabel] of Object.entries(pairLabels)) {
+                    const corrData = selectedSig.correlations?.[pairKey];
+                    if (corrData && corrData.r !== undefined) {
+                        const r = corrData.r;
+                        const color = r > 0.7 ? '#2e7d32' : r > 0.5 ? '#e65100' : r > 0 ? '#1565c0' : '#c2185b';
+                        corrHtml += `
+                            <div style="text-align: center; background: white; padding: 0.75rem; border-radius: 6px;">
+                                <div style="font-size: 1.5rem; font-weight: bold; color: ${color};">r = ${r.toFixed(3)}</div>
+                                <div style="font-size: 0.85rem; color: #666;">${pairLabel}</div>
+                                <div style="font-size: 0.75rem; color: #999;">n = ${corrData.n} cell types</div>
+                            </div>
+                        `;
+                    } else {
+                        corrHtml += `
+                            <div style="text-align: center; background: white; padding: 0.75rem; border-radius: 6px; opacity: 0.6;">
+                                <div style="font-size: 1.5rem; font-weight: bold; color: #999;">N/A</div>
+                                <div style="font-size: 0.85rem; color: #666;">${pairLabel}</div>
+                                <div style="font-size: 0.75rem; color: #999;">No data</div>
+                            </div>
+                        `;
+                    }
+                }
+                document.getElementById('conserved-detail-correlations').innerHTML = corrHtml;
+            } else if (detailPanel) {
+                detailPanel.style.display = 'none';
             }
 
             // Update summary cards
@@ -10223,6 +10305,14 @@
                     tableContainer.innerHTML = tableHtml;
                 }
             }
+        }
+
+        // Clear conserved signature search and hide detail panel
+        function clearConservedSearch() {
+            const searchInput = document.getElementById('conserved-search');
+            const detailPanel = document.getElementById('conserved-signature-detail');
+            if (searchInput) searchInput.value = '';
+            if (detailPanel) detailPanel.style.display = 'none';
         }
 
         // Cross-Atlas: Comparison
@@ -11866,8 +11956,9 @@
             // Adjacent tissue signature type change is handled via onchange in HTML
 
             // Cross-Atlas panels
-            document.getElementById('conserved-sig-type')?.addEventListener('change', updateConservedSignatures);
+            document.getElementById('conserved-sig-type')?.addEventListener('change', () => { clearConservedSearch(); updateConservedSignatures(); });
             document.getElementById('conserved-filter')?.addEventListener('change', updateConservedSignatures);
+            document.getElementById('conserved-search')?.addEventListener('input', updateConservedSignatures);
             document.getElementById('atlas-comparison-type')?.addEventListener('change', updateAtlasComparison);
             document.getElementById('atlas-comp-sig-type')?.addEventListener('change', updateAtlasComparison);
             document.getElementById('atlas-comp-level')?.addEventListener('change', updateAtlasComparison);
